overflow bugfix

--- a/src/styles/Footer/BottomFooter.module.css
+++ b/src/styles/Footer/BottomFooter.module.css
@@ -1,15 +1,15 @@
 .bottomFooter {
     display: flex;
     justify-content: space-between;
-    padding: 1.25rem; /* 20px / 16 */
+    padding: 1.25rem; 
     background-color: #000;
     color: #fff;
 }
 
 .svg {
-    width: 3.125rem; /* 50px / 16 */
+    width: 3.125rem; 
     height: auto;
-    margin: 0 0.25rem; /* 4px / 16 */
+    margin: 0 0.25rem; 
 }
 
 .svgs {
@@ -19,19 +19,19 @@
 
 .copyright {
     text-align: center;
-    font-size: 0.75rem; /* 12px / 16 */
+    font-size: 0.75rem; 
     color: #666;
-    padding: 0.625rem 0; /* 10px / 16 */
-    border-top: 0.0625rem solid #333; /* 1px / 16 */
+    padding: 0.625rem 0; 
+    border-top: 0.0625rem solid #333; 
 }
 
 .column {
     flex: 1;
-    margin: 0 0.625rem; /* 10px / 16 */
+    margin: 0 0.625rem; 
 }
 
 .column h2 {
-    margin-bottom: 0.625rem; /* 10px / 16 */
+    margin-bottom: 0.625rem; 
 }
 
 .dropdown {
@@ -42,7 +42,7 @@
     background: none;
     border: none;
     color: white;
-    font-size: 1rem; /* 16px / 16 */
+    font-size: 1rem; 
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -60,6 +60,7 @@
     right: 0;
     z-index: 10;
     display: none;
+    overflow-y: scroll;
 }
 
 .dropdownList.show {
@@ -67,7 +68,7 @@
 }
 
 .dropdownList li {
-    padding: 0.625rem; /* 10px / 16 */
+    padding: 0.625rem; 
     cursor: pointer;
     color: white;
 }
@@ -82,10 +83,10 @@
 }
 
 .socialIcon svg {
-    margin-right: 0.5rem; /* 8px / 16 */
+    margin-right: 0.5rem; 
 }
 
-@media (max-width: 48rem) { /* 768px / 16 */
+@media (max-width: 48rem) { 
     .dropdown {
         display: block;
     }
@@ -106,11 +107,14 @@
 
     .column button {
         font-weight: bold;
-        font-size: 1.25rem; /* x-large: adjust as needed */
+        font-size: 1.25rem; 
     }
 
     .dropdownList {
         display: none;
+        overflow-y: scroll;
+        height: 200px;
+
     }
 
     .dropdownList.show {
@@ -118,14 +122,14 @@
     }
 
     .divider {
-        margin: 1rem 0; /* 16px / 16 */
+        margin: 1rem 0; 
         color: #666;
         display: block;
         width: 100%;
     }
 }
 
-@media (min-width: 48.0625rem) { /* 769px / 16 */
+@media (min-width: 48.0625rem) { 
     .dropdownButton {
         display: none;
     }
@@ -141,6 +145,6 @@
     }
 
     .dropdownList li {
-        padding: 0.3125rem 0; /* 5px / 16 */
+        padding: 0.3125rem 0; 
     }
 }
